# ChangeLog for app-i18n/scim-qtimm
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-qtimm/Attic/ChangeLog,v 1.13 2005/03/05 13:24:58 usata Exp $

*scim-qtimm-0.8.5 (05 Mar 2005)

  05 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> -scim-qtimm-0.7.ebuild,
  scim-qtimm-0.8.0.ebuild, +scim-qtimm-0.8.5.ebuild:
  Version bumped; bug #83952.
  Thanks to Federico Zenith <zenith@chemeng.ntnu.no>.

  27 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> scim-qtimm-0.7.5.ebuild:
  Stable on x86.

*scim-qtimm-0.8.0 (10 Feb 2005)

  10 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> +scim-qtimm-0.8.0.ebuild:
  Version bumped.

  06 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -scim-qtimm-0.7-r1.ebuild,
  scim-qtimm-0.7.5.ebuild, scim-qtimm-0.7.ebuild:
  Marked 0.7 as stable on x86.

*scim-qtimm-0.7.5 (21 Sep 2004)

  21 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> +scim-qtimm-0.7.5.ebuild:
  Version bumped.

*scim-qtimm-0.7-r1 (11 Sep 2004)

  11 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> +scim-qtimm-0.7-r1.ebuild,
  scim-qtimm-0.7.ebuild:
  Compile fix for qt-3.3.3-r1.

*scim-qtimm-0.7 (05 Sep 2004)

  05 Sep 2004; Mamoru KOMACHI <usata@gentoo.org>
  -scim-qtimm-0.6_pre20040813.ebuild, -scim-qtimm-0.6_pre20040820.ebuild,
  +scim-qtimm-0.7.ebuild:
  Version bumped. Removed old SVN snapshots.

*scim-qtimm-0.6_pre20040820 (22 Aug 2004)

  22 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>
  +scim-qtimm-0.6_pre20040820.ebuild:
  Updated svn snapshot.

  16 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>
  scim-qtimm-0.6_pre20040813.ebuild:
  Corrected immodule version check condition.

*scim-qtimm-0.6_pre20040813 (16 Aug 2004)

  16 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>
  -scim-qtimm-0.5_pre20040719.ebuild, +scim-qtimm-0.6_pre20040813.ebuild:
  New svn snapshot. You need to install the latest scim and recompile
  qt-3.3.2 to get this version work.

  08 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>