@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/scim-qtimm
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-qtimm/Attic/ChangeLog,v 1.13 2005/03/05 13:24:58 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-qtimm/Attic/ChangeLog,v 1.14 2005/03/08 01:00:31 usata Exp $
+
+  08 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> scim-qtimm-0.8.5.ebuild:
+  Set $KDEDIR explicitly in the ebuild. See bug #84369.
 
 *scim-qtimm-0.8.5 (05 Mar 2005)
 
